@@ -1,2 +1,25 @@
 # MemorizeWords
 刷单词软件
+
+当前处在开发阶段，未发布构建版本，但可自行构建使用
+
+## 环境
+* Java21
+* JavaFX(已打包放进资源文件夹，可直接解压使用)
+* Ollama(可选,任意大模型url皆可)
+
+
+## 构建
+1. 下载项目，在终端中输入通过mvnw clean build构建即可
+2. 启动Ollama
+3. 在构建好的jar文件目录下，通过终端命令启动jar文件
+```
+java --module-path ".\javafx-sdk-21.0.6\lib" --add-modules javafx.controls,javafx.fxml -jar MemorizeWords-0.1.jar
+```
+注意需要将".\javafx-sdk-21.0.6\lib"替换为javafx的lib文件夹路径
+
+如果电脑没有安装JavaFx-sdk，可解压项目资源目录下的JavaFx包，使用绝对路径
+
+Ps: 如果未使用Ollama，需要在自动生成的config.yml中修改url和使用的模型名称。
+项目没有兼容apikey，可自行修改MemoryPage.java兼容。
+
